# DiffWatch

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  git_ops.rs  lib.rs  watcher.rs
src/components/: DiffPanel.tsx  EmptyState.tsx  Sidebar.tsx
src/lib/: ai.ts  tauri.ts
