[package]
name = "tauri-app"
version = "0.1.0"
description = "AI Change Inspector - 本地 Git 变更评审工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2" # 选仓库文件夹对话框
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["vendored-libgit2"] } # 不调系统 git，vendored 避免 Windows 缺 libgit2
notify = "6.1"                     # 文件系统事件监听
notify-debouncer-full = "0.3.2"    # notify + 内置防抖(200ms)
